--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 To use the libraries in arduino:
-1. Copy GameOfLightBase into both GameOfLightSim and GameOfLightHW
+1. Copy utility into both GameOfLightSim and GameOfLightHW
 2. Copy GameOfLightSim and GameOfLightHW into <your-arduino-folder>/libraries/
 3. Import the library you need into your program in Arudino IDE
-
+4. Make a GameOfLightSim/GameOfLightHW object (e.g. GameOfLightSim frame; )
