--- a/README
+++ b/README
@@ -3,3 +3,6 @@ To use the libraries in arduino:
 2. Copy GameOfLightSim and GameOfLightHW into <your-arduino-folder>/libraries/
 3. Import the library you need into your program in Arudino IDE
 4. Make a GameOfLightSim/GameOfLightHW object (e.g. GameOfLightSim frame; )
+5. Use it.
+6. ??
+7. Profit
